test/files/neg/t5365c.check
t5365c.scala:5: warning: match may not be exhaustive.
It would fail on the following input: (x: C.Z forSome x not in C.Q)
  def unsealedTrait(z: Z) = z match {
                            ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
